update link tarif in header.html

--- a/header.html
+++ b/header.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="galerie.html">GALERIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tarif.html">TARIFS</a>
+                            <a class="nav-link" href="tarifCard.html">TARIFS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">CONTACT</a>
