--- a/tarifCard.html
+++ b/tarifCard.html
@@ -8,10 +8,11 @@
   <title>Gestion des tarifs </title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link rel = "stylesheet" href = "css/header.css"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+
   <link rel="stylesheet" href="css/tarifCard.css" />
 </head>
 
@@ -22,13 +23,13 @@
   </div>
   <!-- end of header -->
   <main>
-    <button id="show-cards-btn" hidden >Afficher les tarifs</button>
-  <div class="container">
-    <h1>
-      Tarifs et prestations
-    </h1>
-    <!-- <hr> -->
-  </div>
+    <button id="show-cards-btn" hidden>Afficher les tarifs</button>
+    <div class="container">
+      <h1>
+        Tarifs et prestations
+      </h1>
+      <!-- <hr> -->
+    </div>
     <div id="card-container" class="card-container">
       <!-- <div class="card-wrapper">
         <div  class="card">
@@ -39,13 +40,13 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+    </script>
 
   <!-- Include Dexie -->
   <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
