--- a/accueil.html
+++ b/accueil.html
@@ -117,7 +117,7 @@
                         </ul>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><label for="toggle-menu">Close</label></button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><label for="toggle-menu">Fermer</label></button>
                     </div>
                 </div>
             </div>
