add script of header in tarif.js

--- a/tarifs.html
+++ b/tarifs.html
@@ -119,6 +119,7 @@
     <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
 
     <!-- script js -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js" defer></script>
     <script src="js/header.js" defer></script>
 
 </body>
