--- a/tarifs.html
+++ b/tarifs.html
@@ -26,14 +26,13 @@
             <h1>
                 Tarifs et prestations
             </h1>
-            <hr>
         </div>
         <div id="card-container" class="card-container">
             <div class="cardWrapper">
                 <div class="card">
                     <div class="cardFront">
                         <h2>Juste moi</h2>
-                        <p class="price">130</p>
+                        <p class="price">130€</p>
                         <i class="fa fa-arrow-right"></i>
                     </div>
                     <div class="cardBack">
@@ -45,7 +44,7 @@
                 <div class="card">
                     <div class="cardFront">
                         <h2>Pour deux</h2>
-                        <p class="price">195</p>
+                        <p class="price">195€</p>
                         <i class="fa fa-arrow-right"></i>
                     </div>
                     <div class="cardBack">
@@ -57,7 +56,7 @@
                 <div class="card">
                     <div class="cardFront">
                         <h2>Il était une fois</h2>
-                        <p class="price">160</p>
+                        <p class="price">160€</p>
                         <i class="fa fa-arrow-right"></i>
                     </div>
                     <div class="cardBack">
@@ -69,7 +68,7 @@
                 <div class="card">
                     <div class="cardFront">
                         <h2>Famille</h2>
-                        <p class="price">220</p>
+                        <p class="price">220€</p>
                         <i class="fa fa-arrow-right"></i>
                     </div>
                     <div class="cardBack">
@@ -82,7 +81,7 @@
                 <div class="card">
                     <div class="cardFront">
                         <h2>Mon bébé</h2>
-                        <p class="price">100</p>
+                        <p class="price">100€</p>
                         <i class="fa fa-arrow-right"></i>
                     </div>
                     <div class="cardBack">
