Add images of gallery

--- a/galerie.html
+++ b/galerie.html
@@ -91,11 +91,11 @@
 
             <div class="filterDiv  row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="famille">
                 <img src="images/family/family1.jpg" alt="">
-                <img src="images/family2.jpg" alt="">
-                <img src="images/family3.jpg" alt="">
-                <img src="images/family4.jpg" alt="">
-                <img src="images/family5.jpg" alt="">
-                <img src="images/family6.jpg" alt="">
+                <img src="images/family/family2.jpg" alt="">
+                <img src="images/family/family3.jpg" alt="">
+                <img src="images/family/family4.jpg" alt="">
+                <img src="images/family/family5.jpg" alt="">
+                <img src="images/family/family6.jpg" alt="">
             </div>
 
             <div class="filterDiv  row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="Baptême">
