--- a/galerie.html
+++ b/galerie.html
@@ -39,16 +39,16 @@
                     <button type="button" class="btn btn-outline-dark" data-id="bebe">Bébé</button>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-outline-dark" data-id="bebe">Famille</button>
+                    <button type="button" class="btn btn-outline-dark" data-id="famille">Famille</button>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-outline-dark" data-id="bebe">Baptême</button>
+                    <button type="button" class="btn btn-outline-dark" data-id="baptême">Baptême</button>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-outline-dark" data-id="bebe">Couple</button>
+                    <button type="button" class="btn btn-outline-dark" data-id="couple">Couple</button>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-outline-dark" data-id="bebe">Portrait</button>
+                    <button type="button" class="btn btn-outline-dark" data-id="portrait">Portrait</button>
                 </li>
             </ul>
         </div>
@@ -89,7 +89,7 @@
                 <img src="images/bebe/bebe7.jpg" alt="">
             </div>
 
-            <div class="filterDiv  row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="famille">
+            <div class="filterDiv row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="famille">
                 <img src="images/family/family1.jpg" alt="">
                 <img src="images/family/family2.jpg" alt="">
                 <img src="images/family/family3.jpg" alt="">
@@ -98,7 +98,7 @@
                 <img src="images/family/family6.jpg" alt="">
             </div>
 
-            <div class="filterDiv  row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="Baptême">
+            <div class="filterDiv row row-cols-2 row-cols-lg-5 g-2 g-lg-3" id="baptême">
                 <img src="images/bapteme/bapt1.jpg" alt="">
                 <img src="images/bapteme/bapt2.jpg" alt="">
                 <img src="images/bapteme/bapt3.jpg" alt="">
@@ -108,7 +108,7 @@
 
             </div>
 
-            <div class="filterDiv " id="couple">
+            <div class="filterDiv row row-cols-2 row-cols-lg-5 g-2 g-lg-3 " id="couple">
                 <img src="images/couple/couple1.jpg" alt="">
                 <img src="images/couple/couple2.jpg" alt="">
                 <img src="images/couple/couple3.jpg" alt="">
