--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tarif.html">
+                                <a class="nav-link" href="tarifs.html">
                                     <i class="fa-solid fa-money-bill"></i>
                                     TARIFS
                                 </a>
